chore: upgrade to Java 17
Migrated from Java 8 to Java 17 using Moderne CLI with OpenRewrite recipe.
Updated dependencies and fixed compatibility issues for Java 17.

Co-authored-by: Ona <no-reply@ona.com>