@@ -70,9 +70,9 @@ public class RequestLine {
     @Override
     public String toString() {
         if (version != null) {
-            return String.format("%s %s %s", method, uri, version);
+            return "%s %s %s".formatted(method, uri, version);
         } else {
-            return String.format("%s %s", method, uri);
+            return "%s %s".formatted(method, uri);
         }
     }
 
